[sd-1701]-Layout issue in authoring

--- a/client/app/scripts/superdesk-authoring/styles/article-edit.less
+++ b/client/app/scripts/superdesk-authoring/styles/article-edit.less
@@ -243,12 +243,14 @@
 			.text-semibold();
 		}
 		.created {
-			position: absolute;
-			bottom: 15px;
-			left: 20px;
-			color: #888;
-			font-size: 12px;
-			width: 80%;
+				position: absolute;
+				bottom: 15px;
+				left: 20px;
+				color: #888;
+				font-size: 12px;
+				width: 80%;
+				height:14%;
+				float:left;
 		}
 		.text {
 			font-size: 12px;
@@ -275,7 +277,7 @@
 		.subInfo {
 			position: absolute;
 			right: 15px;
-			bottom: 5px;
+			bottom: 1px;
 			float: right;
 		}
 		.container {
